--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: country_picker_plus
+name: ka4_country_picker_plus
 description: Countries, codes, flags and several way of picking them at your service...one widget away...
 version: 1.0.0
 homepage: https://github.com/AhmadKolagha9/country_picker_plus
